# opam-pandoc-bin

./: LICENSE-3RD-PARTY  README.md  dune  pandoc.opam
